# dot-random

./: .gitignore  Cargo.toml  README.md  deploy.txt
component/: Cargo.toml
component/src/: component.rs  lib.rs  royalties.rs
component/tests/: lib.rs
example/: Cargo.toml
example/src/: example.rs  example_badge_auth.rs  lib.rs
example/tests/: lib.rs  test_badge_auth.rs  test_example.rs
random/: Cargo.toml
random/src/: lib.rs  num.rs  random.rs
random/tests/: lib.rs
royalties/: Cargo.toml
royalties/src/: deploy_royalties.rs  lib.rs  royalties.rs
src/: example.rs  lib.rs  random.rs
test-component/: Cargo.toml  README.md
test-component/src/: test-component.rs
test-component/tests/: lib.rs
test-utils/: Cargo.toml
test-utils/src/: cargo.rs  constants.rs  lib.rs
tester/: Cargo.toml
tester/src/: caller_no_auth.rs  lib.rs
tester/tests/: lib.rs  test_no_auth.rs  test_royalties.rs
tester/tests/common/: mod.rs
