[package]
edition = "2021"
name = "component"
version = "0.1.0"


[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }

[dev-dependencies]
component = { path = ".", features = ["test"] }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.0.1" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
path = "src/component.rs"
