[package]
edition = "2021"
name = "royalties"
version = "0.1.0"


[dependencies]
sbor = { version = "1.2.0" }
scrypto = { version = "1.2.0" }

[dev-dependencies]
royalties = { path = ".", features = ["test"] }
radix-transactions = { version = "1.2.0" }
radix-engine = { version = "1.2.0" }
scrypto-test = { version = "1.2.0" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
path = "src/lib.rs"
