[package]
edition = "2021"
name = "test-utils"
version = "0.1.0"


[dependencies]
random = { path = "../random" }
sbor = { version = "1.2.0" }
radix-common = { version = "1.2.0" }
radix-transactions = { version = "1.2.0" }
radix-engine = { version = "1.2.0" }
scrypto-test = { version = "1.2.0" }
home = "0.5.9"
getrandom = { version = "0.2", features = ["js"] }
toml = "0.8.12"

[dev-dependencies]


[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
doctest = false