[package]
edition = "2021"
name = "test-utils"
version = "0.1.0"


[dependencies]
random = { path = "../random" }
radix-common = { version = "1.3.0" }
radix-transactions = { version = "1.3.0" }
radix-engine = { version = "1.3.0" }
scrypto-test = { version = "1.3.0" }
home = "0.5.9"
toml = "0.8.12"

[dev-dependencies]


[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
doctest = false