[package]
edition = "2021"
name = "tester"
version = "0.1.0"


[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.12.1" }
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.12.1" }
random = { path = "../random" }
component = { path = "../component" }
example = { path = "../example" }

[dev-dependencies]
tester = { path = ".", features = ["test"] }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.12.1" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.12.1" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.12.1" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v0.12.1" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]