[package]
edition = "2021"
name = "tester"
version = "0.1.0"


[dependencies]
sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2"}
scrypto = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
random = { path = "../random" }
component = { path = "../component" }

[dev-dependencies]
test-utils = { path = "../test-utils", features = ["test"] }
tester = { path = ".", features = ["test"] }
transaction = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
radix-engine = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
scrypto-unit = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }
scrypto-test = { git = "https://github.com/radixdlt/radixdlt-scrypto", tag = "v1.1.2" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
