[package]
edition = "2021"
name = "tester"
version = "0.1.0"


[dependencies]
sbor = { version = "1.3.0" }
scrypto = { version = "1.3.0" }
random = { path = "../random" }
component = { path = "../component" }

[dev-dependencies]
test-utils = { path = "../test-utils", features = ["test"] }
tester = { path = ".", features = ["test"] }
radix-transactions = { version = "1.3.0" }
radix-engine = { version = "1.3.0" }
scrypto-test = { version = "1.3.0" }

[features]
default = []
test = []

[lib]
crate-type = ["cdylib", "lib"]
doctest = false
